# mmark

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  package.json  renovate.json  vite.config.ts
.github/workflows/: build.yaml
backend/: .gitignore  BUILD.bazel  deps.bzl  go.mod  main.go
backend/internal/api/: BUILD.bazel  marks.go
backend/internal/storage/: BUILD.bazel  filemapemarks.go  mapmarks.go
backend/internal/storage/testdata/: 1.json  2.json  3.json  4.json
frontend/: BUILD.bazel  Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/: App.css  index.css  main.tsx
frontend/src/Auth/: auth.tsx  profile.tsx
frontend/src/query/: mapMarkers.tsx
frontend/src/routes/: __root.tsx  index.tsx
src/: index.css  main.tsx
src/constants/: leafletConstants.tsx
src/query/: chuckJokes.tsx
src/routes/: __root.tsx  auth.lazy.tsx  index.lazy.tsx  index.tsx
src/util/: tileLayer.tsx
