load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "backend_lib",
    srcs = ["main.go"],
    importpath = "github.com/tjololo/mmark/backend",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/internal/api",
        "//backend/internal/storage",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_binary(
    name = "backend",
    embed = [":backend_lib"],
    visibility = ["//visibility:public"],

)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=backend/go.mod",
        "-to_macro=backend/deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
